--- a/doc/reference/Makefile.am
+++ b/doc/reference/Makefile.am
@@ -34,7 +34,7 @@ GTKDOC_LIBS = \
 	$(FLOW_LIBS)
 
 # Extra options to supply to gtkdoc-mkdb
-MKDB_OPTIONS=
+MKDB_OPTIONS=--sgml-mode --output-format=xml
 
 # Extra SGML files that are included by $(DOC_MAIN_SGML_FILE)
 content_files = version.xml
