--- a/flow/Makefile.am
+++ b/flow/Makefile.am
@@ -49,6 +49,7 @@ libflow_la_SOURCES = \
 	flow-event.c \
 	flow-file-connect-op.c \
 	flow-file-connector.c \
+	flow-file-io.c \
 	flow-gobject-util.c \
 	flow-input-pad.c \
 	flow-io.c \
@@ -97,6 +98,7 @@ pkginclude_HEADERS = \
 	flow-event-codes.h \
 	flow-file-connect-op.h \
 	flow-file-connector.h \
+	flow-file-io.h \
 	flow-input-pad.h \
 	flow-io.h \
 	flow-ip-addr.h \
