Add FlowFileIO unit test. It doesn't work yet.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,6 +1,6 @@
 noinst_PROGRAMS = \
 	benchmark-propagation \
-##	test-file-io \
+	test-file-io \
 	test-ip-resolver \
 	test-mux \
 	test-mux-serializer \
