Generate a GType for the FlowAccessMode flags.

--- a/flow/Makefile.am
+++ b/flow/Makefile.am
@@ -8,6 +8,7 @@ pkgconfig_DATA     = flow.pc
 
 flow_headers_to_scan_for_enums = \
 	flow-position.h \
+	flow-shunt.h \
 	flow-tls-protocol.h
 
 EXTRA_DIST         = flow.pc.in
