Commit error handling using GError, work-in-progress, does not build yet.

--- a/flow/Makefile.am
+++ b/flow/Makefile.am
@@ -50,7 +50,7 @@ libflow_la_SOURCES = \
 	flow-event.c \
 	flow-file-connect-op.c \
 	flow-file-connector.c \
-	flow-file-io.c \
+##	flow-file-io.c \
 	flow-gobject-util.c \
 	flow-input-pad.c \
 	flow-io.c \
