FlowSshMasterRegistry: Add skeleton.

--- a/flow/Makefile.am
+++ b/flow/Makefile.am
@@ -81,6 +81,7 @@ libflow_la_SOURCES = \
 	flow-splitter.c \
 	flow-ssh-connect-op.c \
 	flow-ssh-master.c \
+	flow-ssh-master-registry.c \
 	flow-ssh-runner.c \
 	flow-tcp-connect-op.c \
 	flow-tcp-connector.c \
@@ -144,6 +145,7 @@ pkginclude_HEADERS = \
 	flow-splitter.h \
 	flow-ssh-connect-op.h \
 	flow-ssh-master.h \
+	flow-ssh-master-registry.h \
 	flow-ssh-runner.h \
 	flow-tcp-connect-op.h \
 	flow-tcp-connector.h \
